<resources>
    <string name="app_name">LECTurE</string>
    <string name="learn">Learn</string>
    <string name="teach">Teach</string>
    <string name="LECTurE_logo">LECTurE Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="events">Events</string>
    <string name="lessons">Lessons</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
</resources>
